2018.8/_sources/plugins/available/phylogeny/iqtree-ultrafast-bootstrap.txt
iqtree-ultrafast-bootstrap: Construct a phylogenetic tree with IQ-TREE with bootstrap supports.
===============================================================================================


.. raw:: html

   <table class="table action-info">
     <tbody>
       <tr>
         <th scope="row"><p></p>Citations</th>
         <td>

.. bibliography:: phylogeny:iqtree-ultrafast-bootstrap.bib
   :all:
   :keyprefix: phylogeny:iqtree-ultrafast-bootstrap:
   :labelprefix: phylogeny:iqtree-ultrafast-bootstrap:

.. raw:: html

         </td>
       </tr>
     </tbody>
   </table>


.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime phylogeny iqtree-ultrafast-bootstrap [OPTIONS]

     Construct a phylogenetic tree using IQ-TREE (http://www.iqtree.org/) with
     automatic model selection and bootstrap supports.

   Options:
     --i-alignment ARTIFACT PATH FeatureData[AlignedSequence]
                                     Aligned sequences to be used for
                                     phylogenetic reconstruction.  [required]
     --p-seed INTEGER                Random number seed. If not set, program
                                     defaults will be used. See IQ-TREE manual
                                     for details.  [optional]
     --p-n-cores INTEGER RANGE       The number of cores to use for parallel
                                     processing. Use '0' to let IQ-TREE
                                     automatically determine the optimal number
                                     of cores to use.  [default: 1]
     --p-substitution-model [JC+R9|TPM2+R4|SYM+G|K80+I+G|TPM3+R2|TIM3e+R10|TNe+R8|F81+R9|K81+R4|TIMe+R9|TIM3+R3|GTR+R2|TIM2e+R2|TPM2|HKY+I|TN+R3|TPM2u+G|TPM3u+R6|TIM2e+G|TVMe+G|TVMe+R3|TIM2e+R10|TIM3e+R5|GTR+R5|TNe+R7|TIM3+G|TPM2+R10|TIM+I|TIM2+I|JC+R7|TNe+R5|HKY+R8|TNe+R6|TN+I|TPM2u+I+G|TIM3+R6|F81+R7|TPM2+I|SYM|TIM3e+R9|TVM+R3|SYM+R2|HKY+R4|K81u|HKY+R3|TIM+R9|TVMe|TIMe+R4|TPM2+R7|TIM2e+I|JC+R8|K81+R9|TIMe+R5|GTR+R4|TIM2e+I+G|GTR+I|K81+R3|TVMe+R2|TIM3e+R7|TN+R7|TIM+I+G|TPM3u+R7|F81+R6|TPM2u+R8|TPM3+I|TIM3e+R2|TVM+R6|TPM3|TNe+I+G|TPM2u+R3|K80|TIMe+G|JC+I+G|K80+R7|TPM2+R5|K81+R8|TIM3+R10|TNe+R2|GTR+R9|HKY+R6|TVMe+R7|TIMe+R3|K81u+R10|TNe+R9|HKY+I+G|JC+R3|JC+R2|F81+R5|K80+R9|TPM2u+R10|F81+I|TPM2u+R9|TN+R6|TIMe+I+G|TNe+R10|K81+R5|K81+R2|TVMe+R10|TIMe+R7|TVM+R4|TIMe+R8|TIM+R5|HKY+R9|TPM2+I+G|JC+R10|TPM2+R6|TIM|TPM3+R3|JC+R6|TIM2+I+G|TVM+R8|TIM+R3|TPM3u|TIM3e+G|K80+R4|TIM+R7|TIM3+R7|TVMe+R6|TIM2e+R7|SYM+R8|TIM2+R8|K81+R7|TPM3+G|TPM2u+R6|TPM3u+I|TIM2+R2|TIM2e+R9|TVM+I+G|MFP|TIM2+R5|JC|TIM2+G|TIM3e+I|TVMe+R8|HKY+R10|HKY|TVMe+I+G|TPM3u+G|TPM2+R9|TPM2u|TIM3+I|TPM2+R8|TIM2e+R5|TVM+R10|TNe+I|K81u+R9|TPM3+I+G|TPM2+G|TIMe|TIMe+R10|SYM+R3|JC+R5|TIM2+R9|GTR+R6|TIM3e+R8|TVMe+R4|GTR+I+G|F81+R2|TPM3u+I+G|K81+I+G|K81u+R3|HKY+R7|TN+R9|TN+R10|SYM+I+G|F81|TPM2+R3|TIM2+R10|TIM3+R8|TVMe+R9|TPM3u+R5|K80+R10|TPM2u+R2|GTR+R10|TIM+R4|TPM2u+R7|TIM3e+R6|HKY+R2|JC+I|K81u+I+G|TIM2e+R3|TPM2u+I|TVM+G|SYM+I|TEST|TIMe+R2|TIM3e+R3|TIM3+I+G|K81|TIM3+R5|F81+I+G|TIM+R8|HKY+G|K81+R6|GTR+R7|TVM+I|GTR+R3|TPM3u+R8|TN+G|TN+R8|K81u+R7|TPM2u+R4|TPM3+R8|TIM3|TN+R5|TIM2+R6|K80+G|TIM2e+R6|TPM3u+R2|TIM3e|F81+R3|K80+I|TVM|JC+R4|TN+R2|K80+R2|SYM+R5|K81u+I|TIM+R10|TPM3u+R9|SYM+R7|TVM+R7|K80+R8|TN|TIM2+R4|JC+G|TNe|TPM3+R4|TPM3+R6|TPM2+R2|TIM2|TVM+R2|TNe+R4|TPM3u+R10|TIM+R6|TVMe+I|TVM+R5|SYM+R10|GTR+G|HKY+R5|K81+I|TNe+R3|TPM3+R10|TIM2+R3|SYM+R4|TIM3+R9|K80+R3|TIM3e+I+G|F81+G|SYM+R9|TPM3+R9|TIM2e+R4|K81u+R2|K81u+R8|SYM+R6|K81u+R6|TNe+G|TIM2e+R8|TPM3+R5|TPM3u+R4|TVMe+R5|K81+R10|TIM2+R7|F81+R8|TIM3+R4|K81u+R5|TPM3+R7|GTR+R8|K81u+R4|F81+R4|TIMe+I|TIM+G|K81u+G|K81+G|TIMe+R6|TN+R4|K80+R5|TIM2e|TIM3e+R4|TIM3+R2|TVM+R9|GTR|F81+R10|TPM2u+R5|TPM3u+R3|K80+R6|TIM+R2|TN+I+G]
                                     Model of Nucleotide Substitution.If not
                                     provided, IQ-TREE will determine the best
                                     fit substitution model automatically.
                                     [default: MFP]
     --p-bootstrap-replicates INTEGER RANGE
                                     The number of bootstrap searches to perform.
                                     [default: 1000]
     --p-n-init-pars-trees INTEGER RANGE
                                     Number of initial parsimony trees. If not
                                     set, program defaults will be used. See IQ-
                                     TREE manual for details.  [optional]
     --p-n-top-init-trees INTEGER RANGE
                                     Number of top initial trees. If not set,
                                     program defaults will be used. See IQ-TREE
                                     manual for details.  [optional]
     --p-n-best-retain-trees INTEGER RANGE
                                     Number of best trees retained during search.
                                     If not set, program defaults will be used.
                                     See IQ-TREE manual for details.  [optional]
     --p-stop-iter INTEGER RANGE     Number of unsuccessful iterations to stop.
                                     If not set, program defaults will be used.
                                     See IQ-TREE manual for details.  [optional]
     --p-perturb-nni-strength FLOAT  Perturbation strength for randomized NNI. If
                                     not set, program defaults will be used. See
                                     IQ-TREE manual for details.  [optional]
     --p-spr-radius INTEGER RANGE    Radius for parsimony SPR search. If not set,
                                     program defaults will be used. See IQ-TREE
                                     manual for details.  [optional]
     --p-n-max-ufboot-iter INTEGER RANGE
                                     Maximum number of iterations. If not set,
                                     program defaults will be used. See IQ-TREE
                                     manual for details.  [optional]
     --p-n-ufboot-steps INTEGER RANGE
                                     Number of iterations for UFBoot stopping
                                     rule. If not set, program defaults will be
                                     used.See IQ-TREE manual for details.
                                     [optional]
     --p-min-cor-ufboot FLOAT        Minimum correlation coefficient. If not set,
                                     program defaults will be used.See IQ-TREE
                                     manual for details.  [optional]
     --p-ep-break-ufboot FLOAT       Epsilon value to break tie. If not set,
                                     program defaults will be used. See IQ-TREE
                                     manual for details.  [optional]
     --p-allnni / --p-no-allnni      Perform more thorough NNI search.  [default:
                                     False]
     --p-safe / --p-no-safe          Safe likelihood kernel to avoid numerical
                                     underflow  [default: False]
     --o-tree ARTIFACT PATH Phylogeny[Unrooted]
                                     The resulting phylogenetic tree.  [required
                                     if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.phylogeny.methods import iqtree_ultrafast_bootstrap

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Construct a phylogenetic tree with IQ-TREE with bootstrap supports.

   Construct a phylogenetic tree using IQ-TREE (http://www.iqtree.org/) with
   automatic model selection and bootstrap supports.

   Parameters
   ----------
   alignment : FeatureData[AlignedSequence]
       Aligned sequences to be used for phylogenetic reconstruction.
   seed : Int, optional
       Random number seed. If not set, program defaults will be used. See IQ-
       TREE manual for details.
   n_cores : Int % Range(0, None), optional
       The number of cores to use for parallel processing. Use '0' to let IQ-
       TREE automatically determine the optimal number of cores to use.
   substitution_model : Str % Choices({'F81', 'F81+G', 'F81+I', 'F81+I+G', 'F81+R10', 'F81+R2', 'F81+R3', 'F81+R4', 'F81+R5', 'F81+R6', 'F81+R7', 'F81+R8', 'F81+R9', 'GTR', 'GTR+G', 'GTR+I', 'GTR+I+G', 'GTR+R10', 'GTR+R2', 'GTR+R3', 'GTR+R4', 'GTR+R5', 'GTR+R6', 'GTR+R7', 'GTR+R8', 'GTR+R9', 'HKY', 'HKY+G', 'HKY+I', 'HKY+I+G', 'HKY+R10', 'HKY+R2', 'HKY+R3', 'HKY+R4', 'HKY+R5', 'HKY+R6', 'HKY+R7', 'HKY+R8', 'HKY+R9', 'JC', 'JC+G', 'JC+I', 'JC+I+G', 'JC+R10', 'JC+R2', 'JC+R3', 'JC+R4', 'JC+R5', 'JC+R6', 'JC+R7', 'JC+R8', 'JC+R9', 'K80', 'K80+G', 'K80+I', 'K80+I+G', 'K80+R10', 'K80+R2', 'K80+R3', 'K80+R4', 'K80+R5', 'K80+R6', 'K80+R7', 'K80+R8', 'K80+R9', 'K81', 'K81+G', 'K81+I', 'K81+I+G', 'K81+R10', 'K81+R2', 'K81+R3', 'K81+R4', 'K81+R5', 'K81+R6', 'K81+R7', 'K81+R8', 'K81+R9', 'K81u', 'K81u+G', 'K81u+I', 'K81u+I+G', 'K81u+R10', 'K81u+R2', 'K81u+R3', 'K81u+R4', 'K81u+R5', 'K81u+R6', 'K81u+R7', 'K81u+R8', 'K81u+R9', 'MFP', 'SYM', 'SYM+G', 'SYM+I', 'SYM+I+G', 'SYM+R10', 'SYM+R2', 'SYM+R3', 'SYM+R4', 'SYM+R5', 'SYM+R6', 'SYM+R7', 'SYM+R8', 'SYM+R9', 'TEST', 'TIM', 'TIM+G', 'TIM+I', 'TIM+I+G', 'TIM+R10', 'TIM+R2', 'TIM+R3', 'TIM+R4', 'TIM+R5', 'TIM+R6', 'TIM+R7', 'TIM+R8', 'TIM+R9', 'TIM2', 'TIM2+G', 'TIM2+I', 'TIM2+I+G', 'TIM2+R10', 'TIM2+R2', 'TIM2+R3', 'TIM2+R4', 'TIM2+R5', 'TIM2+R6', 'TIM2+R7', 'TIM2+R8', 'TIM2+R9', 'TIM2e', 'TIM2e+G', 'TIM2e+I', 'TIM2e+I+G', 'TIM2e+R10', 'TIM2e+R2', 'TIM2e+R3', 'TIM2e+R4', 'TIM2e+R5', 'TIM2e+R6', 'TIM2e+R7', 'TIM2e+R8', 'TIM2e+R9', 'TIM3', 'TIM3+G', 'TIM3+I', 'TIM3+I+G', 'TIM3+R10', 'TIM3+R2', 'TIM3+R3', 'TIM3+R4', 'TIM3+R5', 'TIM3+R6', 'TIM3+R7', 'TIM3+R8', 'TIM3+R9', 'TIM3e', 'TIM3e+G', 'TIM3e+I', 'TIM3e+I+G', 'TIM3e+R10', 'TIM3e+R2', 'TIM3e+R3', 'TIM3e+R4', 'TIM3e+R5', 'TIM3e+R6', 'TIM3e+R7', 'TIM3e+R8', 'TIM3e+R9', 'TIMe', 'TIMe+G', 'TIMe+I', 'TIMe+I+G', 'TIMe+R10', 'TIMe+R2', 'TIMe+R3', 'TIMe+R4', 'TIMe+R5', 'TIMe+R6', 'TIMe+R7', 'TIMe+R8', 'TIMe+R9', 'TN', 'TN+G', 'TN+I', 'TN+I+G', 'TN+R10', 'TN+R2', 'TN+R3', 'TN+R4', 'TN+R5', 'TN+R6', 'TN+R7', 'TN+R8', 'TN+R9', 'TNe', 'TNe+G', 'TNe+I', 'TNe+I+G', 'TNe+R10', 'TNe+R2', 'TNe+R3', 'TNe+R4', 'TNe+R5', 'TNe+R6', 'TNe+R7', 'TNe+R8', 'TNe+R9', 'TPM2', 'TPM2+G', 'TPM2+I', 'TPM2+I+G', 'TPM2+R10', 'TPM2+R2', 'TPM2+R3', 'TPM2+R4', 'TPM2+R5', 'TPM2+R6', 'TPM2+R7', 'TPM2+R8', 'TPM2+R9', 'TPM2u', 'TPM2u+G', 'TPM2u+I', 'TPM2u+I+G', 'TPM2u+R10', 'TPM2u+R2', 'TPM2u+R3', 'TPM2u+R4', 'TPM2u+R5', 'TPM2u+R6', 'TPM2u+R7', 'TPM2u+R8', 'TPM2u+R9', 'TPM3', 'TPM3+G', 'TPM3+I', 'TPM3+I+G', 'TPM3+R10', 'TPM3+R2', 'TPM3+R3', 'TPM3+R4', 'TPM3+R5', 'TPM3+R6', 'TPM3+R7', 'TPM3+R8', 'TPM3+R9', 'TPM3u', 'TPM3u+G', 'TPM3u+I', 'TPM3u+I+G', 'TPM3u+R10', 'TPM3u+R2', 'TPM3u+R3', 'TPM3u+R4', 'TPM3u+R5', 'TPM3u+R6', 'TPM3u+R7', 'TPM3u+R8', 'TPM3u+R9', 'TVM', 'TVM+G', 'TVM+I', 'TVM+I+G', 'TVM+R10', 'TVM+R2', 'TVM+R3', 'TVM+R4', 'TVM+R5', 'TVM+R6', 'TVM+R7', 'TVM+R8', 'TVM+R9', 'TVMe', 'TVMe+G', 'TVMe+I', 'TVMe+I+G', 'TVMe+R10', 'TVMe+R2', 'TVMe+R3', 'TVMe+R4', 'TVMe+R5', 'TVMe+R6', 'TVMe+R7', 'TVMe+R8', 'TVMe+R9'}), optional
       Model of Nucleotide Substitution.If not provided, IQ-TREE will
       determine the best fit substitution model automatically.
   bootstrap_replicates : Int % Range(1000, None), optional
       The number of bootstrap searches to perform.
   n_init_pars_trees : Int % Range(1, None), optional
       Number of initial parsimony trees. If not set, program defaults will be
       used. See IQ-TREE manual for details.
   n_top_init_trees : Int % Range(1, None), optional
       Number of top initial trees. If not set, program defaults will be used.
       See IQ-TREE manual for details.
   n_best_retain_trees : Int % Range(1, None), optional
       Number of best trees retained during search. If not set, program
       defaults will be used. See IQ-TREE manual for details.
   stop_iter : Int % Range(1, None), optional
       Number of unsuccessful iterations to stop. If not set, program defaults
       will be used. See IQ-TREE manual for details.
   perturb_nni_strength : Float % Range(0.01, 99), optional
       Perturbation strength for randomized NNI. If not set, program defaults
       will be used. See IQ-TREE manual for details.
   spr_radius : Int % Range(1, None), optional
       Radius for parsimony SPR search. If not set, program defaults will be
       used. See IQ-TREE manual for details.
   n_max_ufboot_iter : Int % Range(1, None), optional
       Maximum number of iterations. If not set, program defaults will be
       used. See IQ-TREE manual for details.
   n_ufboot_steps : Int % Range(1, None), optional
       Number of iterations for UFBoot stopping rule. If not set, program
       defaults will be used.See IQ-TREE manual for details.
   min_cor_ufboot : Float % Range(0.51, 0.99), optional
       Minimum correlation coefficient. If not set, program defaults will be
       used.See IQ-TREE manual for details.
   ep_break_ufboot : Float % Range(0.01, 0.99), optional
       Epsilon value to break tie. If not set, program defaults will be used.
       See IQ-TREE manual for details.
   allnni : Bool, optional
       Perform more thorough NNI search.
   safe : Bool, optional
       Safe likelihood kernel to avoid numerical underflow

   Returns
   -------
   tree : Phylogeny[Unrooted]
       The resulting phylogenetic tree.</pre>
       </div>
     </div>
   </div>